--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HOSPITALFOOD"
         tools:targetApi="31">
-        <receiver android:name="com.example.fms.SmsReceiver"
-            android:exported="true"
-            android:permission="android.permission.BROADCAST_SMS">
-            <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>
-        </receiver>
-
 
         <activity
             android:name="com.example.fms.LoginActivity"
@@ -40,13 +32,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.example.fms.SelectMealActivity"></activity>
-        <activity android:name="com.example.fms.BreakfastActivity"></activity>
-        <activity android:name="com.example.fms.LunchActivity"></activity>
-        <activity android:name="com.example.fms.DinnerActivity"></activity>
-        <activity android:name="com.example.fms.PendingBOrderActivity"></activity>
-        <activity android:name="com.example.fms.PendingOrderActivity"></activity>
-        <activity android:name="com.example.fms.ServedBreakfastActivity"></activity>
+        <activity android:name="com.example.fms.MealsActivity"></activity>
+        <activity android:name="com.example.fms.PendingMealsOrderActivity"></activity>
+        <activity android:name="com.example.fms.ServedMealActivity"></activity>
         <activity android:name="com.example.fms.WelcomeActivity"></activity>
         <activity android:name="com.example.fms.RegistrationActivity"></activity>
         <activity android:name="com.example.fms.AdminActivity"></activity>
